name:                yphgreet
version:             0.1.0.0
synopsis:            Greeter for YPH Slack
-- description:
homepage:            https://github.com/relrod/yphgreet/
license:             MIT
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2017 Ricky Elrod
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable yphgreet
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson
                     , base >= 4 && < 5
                     , lens >= 4 && < 5
                     , lens-aeson >= 1 && < 2
                     , mtl >= 2 && < 3
                     , slack-api >= 0.12 && < 1
                     , text >= 1 && < 2
                     , transformers >= 0.5.2.0
                     , wreq
  hs-source-dirs:      src
  default-language:    Haskell2010
